refacto controller and create service for auth routes